--- a/LethalCompanyTemplate.csproj
+++ b/LethalCompanyTemplate.csproj
@@ -8,6 +8,11 @@
         <RunPostBuildEvent>Always</RunPostBuildEvent>
         <GameDir>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\</GameDir>
         <RootNamespace>RollingGiant</RootNamespace>
+        <WeaverDir>C:\Users\nomno\Documents\Modding\NetcodePatcher-2.4.0</WeaverDir>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DebugSymbols>false</DebugSymbols>
     </PropertyGroup>
 
     <ItemGroup>
@@ -25,15 +30,29 @@
       <Reference Include="Assembly-CSharp">
         <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
       </Reference>
-      <Reference Include="TerminalApi">
-        <HintPath>thirdparty\TerminalApi.dll</HintPath>
+      <Reference Include="LethalSettings">
+        <HintPath>..\..\..\Modding\willis81808-LethalSettings-1.2.1\LethalSettings.dll</HintPath>
+        <Private>False</Private>
+      </Reference>
+      <Reference Include="Unity.Collections">
+        <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.Collections.dll</HintPath>
+      </Reference>
+      <Reference Include="Unity.InputSystem">
+        <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.InputSystem.dll</HintPath>
       </Reference>
       <Reference Include="Unity.Netcode.Runtime">
         <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.Netcode.Runtime.dll</HintPath>
       </Reference>
+      <Reference Include="Unity.TextMeshPro">
+        <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+      </Reference>
     </ItemGroup>
+    
+    <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+      <Exec Command="rmdir plugin/BepInEx/ /s /q&#xA;mkdir -p plugin/BepInEx/plugins/RollingGiant&#xA;xcopy /y README.md plugin" />
+    </Target>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="xcopy /y /d &quot;$(TargetDir)$(TargetName).dll&quot; &quot;$(GameDir)\BepInEx\plugins\RollingGiant\&quot;" />
+      <Exec Command="cd $(WeaverDir)&#xA;NetcodePatcher.dll $(TargetDir) deps/&#xA;xcopy /y /d &quot;$(TargetDir)$(TargetName).dll&quot; &quot;$(GameDir)\BepInEx\plugins\RollingGiant\&quot;&#xA;xcopy /y /d &quot;$(TargetDir)$(TargetName).dll&quot; &quot;$(ProjectDir)\plugin\BepInEx\plugins\RollingGiant\&quot;&#xA;xcopy /y /d &quot;$(GameDir)\BepInEx\plugins\RollingGiant\$(TargetName)&quot; &quot;$(ProjectDir)\plugin\BepInEx\plugins\RollingGiant\&quot;" />
     </Target>
 </Project>
